--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.android.weatherapp.ui.home.HomeFragment"
-        android:label="fragment_home"
+        android:label="Home"
         tools:layout="@layout/fragment_home">
 
         <action
@@ -20,13 +20,7 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.android.weatherapp.ui.SettingsFragment"
-        android:label="fragment_settings"
+        android:label="Settings"
         tools:layout="@layout/fragment_settings" />
-
-    <activity
-        android:id="@+id/navHostActivity"
-        android:name="com.example.android.weatherapp.ui.NavHostActivity"
-        android:label="activity_nav_host"
-        tools:layout="@layout/activity_nav_host" />
 
 </navigation>
