--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,6 +8,13 @@
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:src="@mipmap/ic_launcher_round"
+        android:contentDescription="@string/icon_representing_current_weather" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
