--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/icon_representing_current_weather"
         android:src="@mipmap/ic_launcher_round"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/title_nav_header"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
