--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,118 +14,131 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/gradient_background">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradient_background"
-            android:padding="8dp">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_location"
-                style="@style/colorStyle"
+            <ProgressBar
+                android:id="@+id/progressBarHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@={weatherUi.location}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.10"
-                tools:text="Location" />
+                android:layout_centerInParent="true" />
 
-            <TextView
-                android:id="@+id/tv_weather_condition"
-                style="@style/colorStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:text="@={weatherUi.weatherCondition}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-                app:layout_constraintBottom_toBottomOf="@id/img_weather_icon"
-                app:layout_constraintLeft_toRightOf="@id/img_weather_icon"
-                app:layout_constraintTop_toTopOf="@id/img_weather_icon"
-                tools:text="Clear" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayoutHome"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp">
 
-            <TextView
-                android:id="@+id/tv_min_temp"
-                style="@style/colorStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@={weatherUi.minTemperature}"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                app:layout_constraintBaseline_toBaselineOf="@id/tv_temp"
-                app:layout_constraintHorizontal_bias="0.85"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                tools:text="14°" />
+                <TextView
+                    android:id="@+id/tv_location"
+                    style="@style/colorStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@={weatherUi.location}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.10"
+                    tools:text="Location" />
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="#EFEDF2"
-                app:layout_constraintBottom_toTopOf="@id/tv_min_temp"
-                app:layout_constraintLeft_toLeftOf="@id/tv_min_temp"
-                app:layout_constraintRight_toRightOf="@id/tv_min_temp"
-                app:layout_constraintTop_toBottomOf="@id/tv_max_temp" />
+                <TextView
+                    android:id="@+id/tv_weather_condition"
+                    style="@style/colorStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="16dp"
+                    android:text="@={weatherUi.weatherCondition}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+                    app:layout_constraintBottom_toBottomOf="@id/img_weather_icon"
+                    app:layout_constraintLeft_toRightOf="@id/img_weather_icon"
+                    app:layout_constraintTop_toTopOf="@id/img_weather_icon"
+                    tools:text="Clear" />
 
-            <TextView
-                android:id="@+id/tv_max_temp"
-                style="@style/colorStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:text="@={weatherUi.maxTemperature}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                app:layout_constraintBottom_toTopOf="@id/tv_min_temp"
-                app:layout_constraintLeft_toLeftOf="@id/divider"
-                app:layout_constraintRight_toRightOf="@id/divider"
-                tools:layout_editor_absoluteX="309dp"
-                tools:text="27°" />
+                <TextView
+                    android:id="@+id/tv_min_temp"
+                    style="@style/colorStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@={weatherUi.minTemperature}"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    app:layout_constraintBaseline_toBaselineOf="@id/tv_temp"
+                    app:layout_constraintHorizontal_bias="0.85"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    tools:text="14°" />
 
-            <TextView
-                android:id="@+id/tv_temp"
-                style="@style/colorStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@={weatherUi.temperature}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.2"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="23°" />
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="#EFEDF2"
+                    app:layout_constraintBottom_toTopOf="@id/tv_min_temp"
+                    app:layout_constraintLeft_toLeftOf="@id/tv_min_temp"
+                    app:layout_constraintRight_toRightOf="@id/tv_min_temp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_max_temp" />
 
-            <TextView
-                android:id="@+id/tv_weather_description"
-                style="@style/colorStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@={weatherUi.weatherDescription}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.80"
-                tools:text="Weather Description" />
+                <TextView
+                    android:id="@+id/tv_max_temp"
+                    style="@style/colorStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@={weatherUi.maxTemperature}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    app:layout_constraintBottom_toTopOf="@id/tv_min_temp"
+                    app:layout_constraintLeft_toLeftOf="@id/divider"
+                    app:layout_constraintRight_toRightOf="@id/divider"
+                    tools:layout_editor_absoluteX="309dp"
+                    tools:text="27°" />
 
-            <ImageView
-                android:id="@+id/img_weather_icon"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_marginTop="64dp"
-                android:contentDescription="@string/weather_condition"
-                android:scaleType="fitCenter"
-                app:layout_constraintBottom_toTopOf="@id/tv_temp"
-                app:layout_constraintLeft_toLeftOf="@id/tv_temp"
-                tools:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:id="@+id/tv_temp"
+                    style="@style/colorStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@={weatherUi.temperature}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="23°" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/tv_weather_description"
+                    style="@style/colorStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@={weatherUi.weatherDescription}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.80"
+                    tools:text="Weather Description" />
+
+                <ImageView
+                    android:id="@+id/img_weather_icon"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="64dp"
+                    android:contentDescription="@string/weather_condition"
+                    android:scaleType="fitCenter"
+                    app:layout_constraintBottom_toTopOf="@id/tv_temp"
+                    app:layout_constraintLeft_toLeftOf="@id/tv_temp"
+                    tools:src="@mipmap/ic_launcher" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </RelativeLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
