--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.android.weatherapp.ui.SettingsFragment"
+        android:name="com.example.android.weatherapp.ui.settings.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
 
