Initiated adding location preference in Settings Fragment

--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -11,6 +11,10 @@
             android:key="pref_units"
             android:title="Units" />
 
+        <EditTextPreference
+            android:title="Location"
+            android:key="pref_location"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
