Resolved issue of Metric not being shown as summary of Units when selected in Settings Fragment

--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -4,7 +4,7 @@
     <PreferenceCategory android:title="General">
 
         <ListPreference
-            android:dialogTitle="Units"
+            android:dialogTitle="Select Units"
             android:entries="@array/pref_units_entries"
             android:entryValues="@array/pref_units_entry_values"
             android:key="pref_units"
