--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -16,6 +16,7 @@
             android:dialogTitle="Enter Location"
             android:key="pref_location"
             android:title="Location"
+            android:icon="@drawable/ic_edit_location"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
