Re-organized files

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="weatherUi"
-            type="com.example.android.weatherapp.data.ui.WeatherUi" />
+            type="com.example.android.weatherapp.data.ui.WeatherUI" />
     </data>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
