--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -17,6 +17,7 @@
             app:useSimpleSummaryProvider="true" />
 
         <EditTextPreference
+            android:defaultValue="@string/pref_units_default_entry"
             android:dialogTitle="Enter Location"
             android:key="pref_location"
             android:title="Location"
