--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,7 +7,7 @@
 
         <item
             android:id="@+id/homeFragment"
-            android:icon="@drawable/ic_settings"
+            android:icon="@drawable/ic_home"
             android:title="@string/home" />
 
         <item
